<resources>
    <string name="app_name">SchoolTest</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">이메일</string>
    <string name="prompt_name">이름</string>
    <string name="prompt_mobile">전화번호</string>
    <string name="prompt_password">패스워드</string>
    <string name="prompt_passwordConfirm">패스워드 확인</string>
    <string name="prompt_classIdx">학반</string>
    <string name="prompt_classNumber">학번</string>
    <string name="prompt_male">남성</string>
    <string name="prompt_female">여성</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_up">회원가입</string>
    <string name="action_leave_out">외출</string>
    <string name="action_leave_sleep">외박</string>
    <string name="error_invalid_email">이메일 형식이 올바르지 않습니다</string>
    <string name="error_invalid_password">패스워드 형식이 올바르지 않습니다</string>
    <string name="error_incorrect_password">패스워드가 틀립니다</string>
    <string name="error_confirm_password">패스워드가 같지 않습니다</string>
    <string name="error_field_required">양식을 입력하지 않았습니다</string>
    <string name="error_email_exist">이미 존재하는  이메일입니다</string>
    <string name="error_server_error">서버에서 에러가 발생했습니다</string>
    <string name="permission_rationale">"이메일 자동 완성 기능을 위해 권한이 필요합니다."</string>
    <string name="title_activity_register">회원가입</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
